# mgs

./: Caddyfile
mgs-be/: .env  .gitignore  Cargo.toml  diesel.toml
mgs-be/mgs_api/: .env  Cargo.toml
mgs-be/mgs_api/src/: lib.rs  main.rs  models.rs  routes.rs
mgs-be/mgs_back/: Cargo.toml
mgs-be/mgs_back/migrations/2020-02-24-193747_create_assets/: down.sql  up.sql
mgs-be/mgs_back/src/: lib.rs
mgs-be/mgs_back/src/db/: schema.rs
mgs-be/mgs_back/src/db/models/: asset.rs
mgs-be/mgs_common/: Cargo.toml
mgs-be/mgs_common/src/: lib.rs
mgs-be/migrations/2020-02-24-193747_create_assets/: up.sql
mgs-be/sql/: clean.sql  data.sql  init.sh  reset.sql  schema.sql
mgs-be/src/: main.rs
mgs-fe/: README.md  package.json  vue.config.js
mgs-fe/src/: App.vue
mgs-fe/src/components/: AddAsset.vue  AssetType.vue  Assets.vue  Menu.vue
mgs-fe/src/models/: AssetModel.ts
mgs-fe/src/router/: index.ts
mgs-fe/src/service/: enums.ts
mgs-fe/src/store/: index.ts
mgs-fe/src/styles/: variables.scss
mgs-fe/src/views/: AssetsPage.vue  DashboardPage.vue
