[package]
name = "mgs_api"
version = "0.1.0"
authors = ["suive <is@suive.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mgs_back = { path = "../mgs_back" }
mgs_common = { path = "../mgs_common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = "0.4.2"
rocket_contrib = "0.4.2"