[package]
name = "mgs_back"
version = "0.1.0"
authors = ["suive <is@suive.name>"]
edition = "2018"

[dependencies]
mgs_common = { path = "../mgs_common" }
rusqlite = { version = "0.21.0", features = ["chrono", "trace"]}
dotenv = "0.9.0"
chrono = "0.4"
lazy_static = "1.4.0"
r2d2 = "0.8.8"
r2d2_sqlite = "0.14.0"