[package]
name = "mgs_common"
version = "0.1.0"
authors = ["suive <is@suive.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.21.0", features = ["chrono", "trace"]}
